# python-crud-api

./: crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/versions/: 2024_07_28_1752-e278b4581226_createproducts_table.py  2024_07_28_1802-ae9f0103bf17_create_users_table.py  2024_07_28_1818-d9161b360f4b_create_posts_one_to_many_table.py  2024_07_28_1929-959fbb019f33_create_profiles_one_to_one_table.py  2024_07_28_2123-f2d3e6fd2b96_create_profiles_one_to_one_table.py
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  post.py  user.py
users/: crud.py  schemas.py  views.py
